--- a/ConnexionBDD/BDDConnexionService/src/main/resources/application.properties
+++ b/ConnexionBDD/BDDConnexionService/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 spring.application.name=BDDConnexionService
 server.port 8082
+spring.cloud.cinfig.server.git.uri=https://github.com/YJbrd/Architecture-Service/tree/main
