--- a/Authentification/AuthentificationService/src/main/resources/application.properties
+++ b/Authentification/AuthentificationService/src/main/resources/application.properties
@@ -1,2 +1,8 @@
 spring.application.name=AuthentificationService
-server.port 8081
+#spring.cloud.config.label=main
+
+spring.config.import=optional:configurationserver:${SPRING_CLOUD_CONFIG_URI:http://localhost:8082}
+server.port=8083
+debug=true
+
+spring.main.allow-bean-definition-overriding=true
