--- a/ConfigurationService/pom.xml
+++ b/ConfigurationService/pom.xml
@@ -9,10 +9,10 @@
 		<relativePath/> <!-- lookup parent from repository -->
 	</parent>
 	<groupId>fr.insa.brauard</groupId>
-	<artifactId>AuthentificationService</artifactId>
+	<artifactId>ConfigurationService</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
-	<name>AuthentificationService</name>
-	<description>authentification service de l&apos;application</description>
+	<name>ConfigurationService</name>
+	<description>ConfigurationService</description>
 	<url/>
 	<licenses>
 		<license/>
@@ -28,11 +28,12 @@
 	</scm>
 	<properties>
 		<java.version>17</java.version>
+		<spring-cloud.version>2023.0.0</spring-cloud.version>
 	</properties>
 	<dependencies>
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
-			<artifactId>spring-boot-starter-web</artifactId>
+			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
 		<dependency>
@@ -40,19 +41,32 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
-
+		<dependency>
+			<groupId>fr.insa.brauard</groupId>
+			<artifactId>AuthentificationService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		
 		<dependency>
 			<groupId>mysql</groupId>
 			<artifactId>mysql-connector-java</artifactId>
 			<version>8.0.21</version>
 		</dependency>
-
-		<dependency>
-			<groupId>fr.insa.brauard</groupId>
-			<artifactId>BDDConnexionService</artifactId>
-			<version>0.0.1-SNAPSHOT</version>
-		</dependency>
+		
 	</dependencies>
+	
+	<dependencyManagement>
+		<dependencies>
+			<dependency>
+				<groupId>org.springframework.cloud</groupId>
+				<artifactId>spring-cloud-dependencies</artifactId>
+				<version>${spring-cloud.version}</version>
+				<type>pom</type>
+				<scope>import</scope>
+			</dependency>
+		</dependencies>
+	</dependencyManagement>
+	
 
 	<build>
 		<plugins>
