Ajout d'une partie des Tasks

--- a/Request/RequestService/pom.xml
+++ b/Request/RequestService/pom.xml
@@ -40,6 +40,16 @@
 			<artifactId>spring-boot-starter-test</artifactId>
 			<scope>test</scope>
 		</dependency>
+		<dependency>
+			<groupId>fr.insa.brauard</groupId>
+			<artifactId>BDDConnexionService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.insa.brauard</groupId>
+			<artifactId>AuthentificationService</artifactId>
+			<version>0.0.1-SNAPSHOT</version>
+		</dependency>
 	</dependencies>
 
 	<build>
